--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>RentUp - Residence & Real Estate Website</title>
+    <title>HomeStyler</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
